# ImageProcessing

./: .gitignore  CMakeLists.txt  main.cpp
Headers/: Complement.hpp  Dilatation.hpp  Dilation.hpp  Erosion.hpp  Filling.hpp  Image.h  Image.hpp  ImageEntropy.hpp  ImageProcessor.hpp  KernelGenerator.hpp  Normalization.hpp  Opening.hpp
Sources/: Image.cpp
